<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.teenvan.financemanager.OneoffActivity" >

    <TextView
        android:id="@+id/currencyTextBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currencyText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/currency_body"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/currencyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/currency_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/currencyScroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/currencyText"
        android:layout_centerVertical="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp" >

            <TextView
                android:id="@+id/dollarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/euroText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/poundText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pound_text"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/rupeeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee_text"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>