<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    tools:context="com.teenvan.financemanager.MainActivity" >

    <TextView
        android:id="@+id/budgetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/budget_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/budgetBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/budgetText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/budget_body"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <Button
        android:id="@+id/repeatMonthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/budgetBody"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/repeat_monthly" />

    <Button
        android:id="@+id/repeatWeekly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/repeatMonthly"
        android:layout_below="@+id/repeatMonthly"
        android:layout_marginTop="15dp"
        android:text="@string/repeating_weekly_budget" />

    <Button
        android:id="@+id/oneoffButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repeatWeekly"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/one_off_budget" />

</RelativeLayout>